edit workflow resume and add swagger